--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <header id="header"></header>
+    
     <h1>Hello World!</h1>
+
+    <footer id="footer"></footer>
 </body>
 </html>
