--- a/src/user-home/index.html
+++ b/src/user-home/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header id="header"></header>
-
-    <h1>Homepage</h1>
+    
+    <h1>User Landing page</h1>
 
     <footer id="footer"></footer>
 </body>
