--- a/src/company-creation/index.html
+++ b/src/company-creation/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Company Creation</title>
+    <script src="/js/main.js" type="module"></script>
 </head>
 <body>
-    <header id="header"></header>
+    <header id="main-header"></header>
     
-    <h1>Company creation page</h1>
+    <h1>Company Creation page</h1>
 
-    <footer id="footer"></footer>
+    <footer id="main-footer"></footer>
 </body>
 </html>
