--- a/src/login/index.html
+++ b/src/login/index.html
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <script src="/js/main.js" type="module"></script>
+    <script type="module">
+        import Admin from "../js/admin.js";
+        const admin = new Admin('login-space');
+        admin.showLogin();
+
+    </script>
 </head>
 <body>
-    <header id="main-header"></header>
-    
-    <h1>Login page</h1>
+    <header id="main-header" class="divider"></header>
+    <main>
+        <div id="login-space">
 
+        </div>
+    </main>
     <footer id="main-footer"></footer>
 </body>
 </html>
