styling of the home page

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,28 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <script src="/js/main.js" type="module"></script>
-</head>
-<body>
-    <header id="main-header"></header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <h1>Homepage</h1>
+    <!-- Web page CSS -->
+    <link rel="stylesheet" href="./css/template.css" />
+    <link rel="stylesheet" href="./css/home.css">
+
+    <script src="/js/main.js" type="module"></script>
+   
+    <title>Home</title>
+  </head>
+  <body>
+    <header id="header"></header>
+    <img src="./images/hero.webp" alt="Tech">
+
 
     <footer id="main-footer"></footer>
-</body>
+    <!-- Web page script -->
+
+    <!-- Ion icons CDN -->
+
+  </body>
 </html>
