displays list of tasks, working on details

--- a/src/task-details.html
+++ b/src/task-details.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Details</title>
-    <script src="/js/main.js" type="module"></script>
+    <script src="/js/task.js" type="module"></script>
 </head>
 <body>
-    <header id="main-header"></header>
+    <header id="header"></header>
     
     <h1>Task Details page</h1>
 
