--- a/src/login.html
+++ b/src/login.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <script type="module">
-        import Admin from "../js/admin.js";
+        import Admin from "/js/admin.js";
         const admin = new Admin('login-space');
         admin.showLogin();
 
     </script>
 </head>
 <body>
-    <header id="main-header" class="divider"></header>
+    <header id="header" class="divider"></header>
     <main>
         <div id="login-space">
 
