--- a/src/signup/index.html
+++ b/src/signup/index.html
@@ -13,7 +13,7 @@
     </script>
 </head>
 <body>
-    <header id="main-header" class="divider"></header>
+    <header id="header" class="divider"></header>
     <main>
         <div id="signup-space">
 
