--- a/src/task-details.html
+++ b/src/task-details.html
@@ -6,27 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Details</title>
     <script src="/js/task.js" type="module"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js" type="module"></script>
     <script src="js/taskPage.js"></script>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/template.css">
+    <link rel="stylesheet" href="css/details.css">
 </head>
 <body>
     <header id="header"></header>
     
-    <h1>Task Details page</h1>
-
-    <h1 id="title">Task Title</h1>
-    <h2 id="description">A description of the task goes here</h2>
-    <small id="created">Date Created: </small>
-    <small id="due">Date Due: </small>
-    <p id="status">Status: </p>
-    <p id="creator">Requested by: </p>
-    <p id="assigned">Assigned to: </p>
-    <p id="priority">Priority: </p>
-
-
+    <main>
+    <div>
+        <h1 id="title">Task Title</h1>
+        <h2 id="description">A description of the task goes here</h2>
+    </div>
+    <div>
+        <small id="created">Date Created: </small>
+        <small id="due">Date Due: </small>
+        <p id="status">Status: </p>
+        <p id="creator">Requested by: </p>
+        <p id="assigned">Assigned to: </p>
+        <p id="priority">Priority: </p>
+    </div>
+    </main>
     <footer id="main-footer"></footer>
 </body>
 </html>
