--- a/src/user-home.html
+++ b/src/user-home.html
@@ -32,7 +32,7 @@
 
     <!-- Modal content -->
     <div id="modal-content">
-      <span class="close">&times;</span>
+      <span id="close">&times;</span>
       <script type="module">
         import Admin from "/js/admin.js";
         const admin = new Admin('modal-content');
