--- a/src/task-details.html
+++ b/src/task-details.html
@@ -12,14 +12,14 @@
     
     <h1>Task Details page</h1>
 
-    <h1 id="title">Task Title</h1>
-    <h2 id="description">A description of the task goes here</h2>
-    <small id="created">Date Created: </small>
-    <small id="due">Date Due: </small>
-    <p id="status">Status: </p>
-    <p id="creator">Requested by: </p>
-    <p id="assigned">Assigned to: </p>
-    <p id="priority">Priority: </p>
+    <h1 class="task-info" id="title">Task Title</h1>
+    <h2 class="task-info" id="description">A description of the task goes here</h2>
+    <small class="task-info" id="created">Date Created: </small>
+    <small class="task-info" id="due">Date Due: </small>
+    <p class="task-info" id="status">Status: </p>
+    <p class="task-info" id="creator">Requested by: </p>
+    <p class="task-info" id="assigned">Assigned to: </p>
+    <p class="task-info" id="priority">Priority: </p>
 
 
     <footer id="main-footer"></footer>
