home page link gets changed to user home page when logged in, and signout is possible

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Web page CSS -->
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/template.css" />
     <link rel="stylesheet" href="css/home.css">
 
