--- a/src/task-details.html
+++ b/src/task-details.html
@@ -15,19 +15,22 @@
 </head>
 <body>
     <header id="header"></header>
-    <main>
+    <main class="gray">
         <div>
             <h1 class="task-info" id="title">Task Title</h1>
+            <h2 id="desc">Task Description</h2>
             <h2 class="task-info" id="description">A description of the task goes here</h2>
+            <small class="task-info" id="created"></small>
+            <small class="task-info" id="due"></small>
         </div>
         <div>
-            <small class="task-info" id="created">Date Created: </small>
-            <small class="task-info" id="due">Date Due: </small>
-            <p class="task-info" id="status">Status: </p>
-            <p class="task-info" id="creator">Requested by: </p>
-            <p class="task-info" id="assigned">Assigned to: </p>
-            <p class="task-info" id="priority">Priority: </p>
+            <p class="task-info white" id="status"></p>
+            <p class="task-info" id="creator"></p>
+            <p class="task-info white" id="assigned"></p>
+            <p class="task-info" id="priority"></p>
         </div>
+
+        <button id="accept">Accept Task</button>
     </main>
     <footer id="main-footer"></footer>
 </body>
