--- a/src/user-home.html
+++ b/src/user-home.html
@@ -20,7 +20,7 @@
 <body>
     <header id="header"></header>
     
-    <h1>User Landing page</h1>
+    <!-- <h1>User Landing page</h1> -->
 
     <ul id ="filter-selection" class="filter-selection"></ul>
 
